# MoodSense-DSP422

./: .gitattributes  .gitignore  Final Project - Code.ipynb  README.md  Readme2.txt  inference.py  moodsense_architecture.html  pyproject.toml  requirements.txt  requirements_old.txt
.streamlit/: config.toml
app/: moodsense_app.py  requirements.txt  song_embeddings_30k.npy  song_metadata_30k.csv  song_metadata_50k.csv
artifacts/: audio_features.json  context_cols.json  label_encoder.pkl  nlp_scaler.pkl  scaler.pkl  tfidf_vectorizer.pkl
mirex_pipeline/: README.md  inference.py
mirex_pipeline/models/: audio_scaler.pkl  audio_scaler_mirex.pkl  tfidf_mirex.pkl
models/: context_scaler.pkl  model_text.pkl  scaler.pkl  tfidf_vectorizer.pkl
notebooks/: 01_data_prep.ipynb  02_classification.ipynb  03_embeddings_fixed.ipynb  04_retrieval_demo.ipynb  EDA_Spotify_Tracks_Dataset.ipynb  MoodSense_AI_Prompted_Music_Playlist_System.ipynb  MoodSense_Complete_Pipeline.ipynb
