[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moodsense"
version = "1.0.0"
description = "AI-Powered Music Playlist Generator"
requires-python = "==3.11.*"
dependencies = [
    "streamlit==1.31.0",
    "numpy==1.26.4",
    "pandas==2.1.4",
    "scikit-learn==1.4.0",
    "sentence-transformers==2.3.1",
    "shap==0.42.1",
    "matplotlib==3.8.0",
    "seaborn==0.13.2",
    "plotly==5.18.0",
]
